# race-gamble-core

./: .gitignore  Makefile  README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: run_unit_tests.yml
race_gamble_core/: __init__.py  odds_prob.py
race_gamble_core/schemas/: bet_type.py  evaluation_results.py  odds.py  order.py
tests/: conftest.py
tests/schemas/: test_evaluation_results.py  test_odds.py  test_order.py
