[tool.poetry]
name = "race-gamble-core"
version = "0.1.0"
description = "A shared module for race-gamble projects."
authors = ["DaikiTanak <daiki.yosky@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.10.4"
numpy = "^2.2.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
